# toy_contractor

./: .pre-commit-config.yaml  Makefile  README.md  TODO.md  TODO.org  USAGE.md  api_client.py  client.Dockerfile  demo.sh  docker-compose.yml  ollama.Dockerfile
.github/workflows/: lint.yaml  test_lint.yaml
app/: Dockerfile  pyproject.toml
app/contractgen_api/: db.py  llm.py  main.py
client/: README.md  api_client.py  create_contract.py  fetch_contract.py  health_check.py  list_contracts.py  refine_contract.py  test_api.py
