[project]
name = "contractgen-api"
version = "0.1.0"
description = "FastAPI service for contract drafting & versioning (SQLite + Ollama)"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "aiosqlite>=0.19",
]

[project.scripts]
start-api = "contractgen_api.main:run"
